# intern-training

./: README.md
day_1/: oop_basics.py
day_12/: task.sql
day_13/: pyproject.toml  task.py
day_14/: alembic.ini  main.py  model.py  schema.py
day_15/: main.py  pyproject.toml
day_16/: index.html  style.css
day_23/backend/: .dockerignore  main.py  pyproject.toml
day_23/backend/app/database/: database.py
day_23/backend/app/migrations/versions/: d8c16e52e278_create_the_chat_message_and_chat_.py
day_23/backend/app/model/: user.py
day_23/backend/app/router/: chatbot.py
day_23/backend/app/service/: auth_service.py  connection_manager.py
day_24/backend/: Dockerfile  alembic.ini  database.py  main.py  pyproject.toml  test_main.py
day_24/backend/app/database/: database.py
day_24/backend/app/migrations/: env.py
day_24/backend/app/migrations/versions/: 2d44db2d428f_create_the_users_table.py  d8c16e52e278_create_the_chat_message_and_chat_.py
day_24/backend/app/model/: chat_message.py  chat_session.py  user.py
day_24/backend/app/router/: auth.py  chatbot.py  event.py  socket.py
day_24/backend/app/schemas/: auth.py
day_24/backend/app/service/: auth_service.py  chat_service.py  connection_manager.py
day_24/backend/app/utils/: dependency.py  jwt.py
week_3/day_15/: alembic.ini  main.py  pyproject.toml
week_3/day_15/practices/: main.py
week_3/day_15/practices/migrations/: env.py
week_3/day_15/practices/model/: chat_message.py  chat_session.py
week_3/day_15/practices/router/: socket.py
week_3/day_15/practices/service/: chat_service.py
(+223 files in other folders)
